force-app/main/default/objects/Case_Waiting_Document__c/Case_Waiting_Document__c.object-meta.xml
<CustomObject>
    <label>Case Waiting Document</label>
    <nameField>
        <displayFormat>CWS{YYYYMMDD}{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Waiting Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>