force-app/main/default/objects/Case_Waiting_Document__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>StartDateTime</label>
    <type>DateTime</type>
</CustomField>